<resources>
    <string name="ex_bench_press">Bench Press</string>
    <string name="ex_incline_bench_press">Incline Bench Press</string>
    <string name="ex_decline_bench_press">Decline Bench Press</string>
    <string name="ex_dumbbell_bench_press">Dumbbell Bench Press</string>
    <string name="ex_incline_dumbbell_press">Incline Dumbbell Press</string>
    <string name="ex_dumbbell_fly">Dumbbell Fly</string>
    <string name="ex_cable_crossover">Cable Crossover</string>
...
